# gesture-recognition-system

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: 1week_cores.py  1week_digital_paint.py  1weel_mouse_drawning.py  collect_data.py  hello_opencv.py  run_hand_detection.py  run_realtime.py  setup_check.py  train_model.py
src/application/services/: feature_extractor.py  prediction_smoother.py
src/domain/entities/: hand.py
src/domain/interfaces/: hand_detector.py
src/domain/value_objects/: coordinate.py
src/infrastructure/detectors/: mediapipe_detector.py
