[tool.poetry]
name = "gesture-recognition"
version = "0.1.0"
description = "Sistema de reconhecimento de gestos com visão computacional"
authors = ["Seu Nome <seu@email.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0"
mediapipe = "^0.10.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
pyyaml = "^6.0"
matplotlib = {version = "^3.7.0", optional = true}
sounddevice = {version = "^0.4.0", optional = true}
scipy = {version = "^1.11.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.285"
mypy = "^1.5.0"
ipython = "^8.14.0"
ipykernel = "^6.25.0"

[tool.poetry.extras]
full = ["matplotlib", "sounddevice", "scipy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"